--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -16,6 +16,7 @@
   <noscript>Sorry, we need js to run correctly!</noscript>
   <script>
     window.config = {
+      // apiUrl: 'http://192.168.1.104:9099' // test
       // apiUrl: 'http://192.168.4.56:9099' // 成杰
       apiUrl: 'http://zmmax.systex365.com:10050'
       // apiUrl: 'http://192.168.4.128:9099' // 俊峰
