单选框/复选框

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -16,10 +16,10 @@
   <noscript>Sorry, we need js to run correctly!</noscript>
   <script>
     window.config = {
-      apiUrl: 'http://192.168.1.118:9099' // test
+      // apiUrl: 'http://192.168.1.118:9099' // test
       // apiUrl: 'http://192.168.1.109:9099' // test
       // apiUrl: 'http://192.168.4.56:9099' // 成杰
-      // apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
+      apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
       // apiUrl: 'http://192.168.4.128:9099' // 俊峰
       // apiUrl: 'http://192.168.60.205:10050' // 内网服务器
       // apiUrl : 'http://192.168.4.126:9099' // 冰清
