--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -19,7 +19,7 @@
       // apiUrl: 'http://192.168.1.118:9099' // test
       // apiUrl: 'http://192.168.1.109:9099' // test
       // apiUrl: 'http://192.168.4.56:9099' // 成杰
-      // apiUrl: 'http://crm.addchina.com:7080' //客户环境
+      // apiUrl: 'http://crm.addchina.com:7080' //客户环境 123
       apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
       // apiUrl: 'http://192.168.4.128:9099' // 俊峰
       // apiUrl: 'http://192.168.60.205:10050' // 内网服务器
