--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -19,10 +19,10 @@
       // apiUrl: 'http://192.168.1.118:9099' // test
       // apiUrl: 'http://192.168.1.109:9099' // test
       // apiUrl: 'http://192.168.4.56:9099' // 成杰
-      // apiUrl: 'http://crm.addchina.com:7080' //客户环境 123
+      apiUrl: 'http://crm.addchina.com:7080' //客户环境 123
       // apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
-      // apiUrl: 'http://192.168.4.128:9099' // 俊峰
-      apiUrl: 'http://192.168.60.205:10050' // 内网服务器
+      // apiUrl: 'http://192.168.4.141:9099' // 俊峰
+      // apiUrl: 'http://192.168.60.205:10050' // 内网服务器
       // apiUrl: 'http://192.168.1.104:9099' // 冰清
       // apiUrl: 'http://192.168.4.138:9099' // 佳丽
       // apiUrl: 'http://192.168.4.130:9099' // 立中
