--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -51,7 +51,7 @@
     background: @pro-header-hover-bg;
   }
 }
-.triggerIcon{
+.triggerIcon {
   line-height: @layout-header-height;
   top: 2px;
   left: 10px;
@@ -66,14 +66,14 @@
   height: @layout-header-height;
   background: red;
   float: left;
-  ul{
+  ul {
     height: @layout-header-height;
     font-size: 1.1rem;
     border-bottom: none;
     // padding-top: 6px;
     align-items: center;
     display: flex;
-    li{
+    li {
       // line-height: 60px;
       align-items: center;
       padding: 0 16px;
@@ -102,6 +102,12 @@
   float: right;
   height: 100%;
   overflow: hidden;
+  a {
+    color: unset;
+  }
+  a:hover {
+    color: #1890ff;
+  }
   .action {
     display: inline-block;
     height: 100%;
