--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -25,9 +25,9 @@
       apiUrl: 'http://192.168.60.205:10050' // 内网服务器
       // apiUrl: 'http://192.168.1.104:9099' // 冰清
       // apiUrl: 'http://192.168.4.138:9099' // 佳丽
-      apiUrl: 'http://192.168.4.142:9099' // 万
+      // apiUrl: 'http://192.168.4.142:9099' // 万
       // apiUrl : 'http://192.168.4.62:9099' // 永昆
-      // apiUrl : 'http://192.168.4.59:9099' //  李强
+      // apiUrl: 'http://192.168.4.59:9099' //  李强
       // apiUrl : 'http://192.168.4.60:9099' //  宁江龙
     }
     localStorage.setItem('origin', window.location.origin)
