报表兼容路径

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="NOTEXT.manifest">
+<html lang="en" manifest="NOTEXT22.manifest">
 
 <head>
   <meta charset="UTF-8" />
