--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="NOTEXT21148.manifest">
+<html lang="en" manifest="NOTEX148.manifest">
 
 <head>
   <meta charset="UTF-8" />
