--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="NOTEX198.manifest">
+<html lang="en" manifest="NOTEX14238.manifest">
 
 <head>
   <meta charset="UTF-8" />
@@ -9,6 +9,7 @@
   <title>精诚供应链系统</title>
   <link rel="icon" href="../assets/logo.png" type="image/x-icon" />
   <link rel="stylesheet" href="./iconfont.css">
+
 </head>
 
 <body>
@@ -21,12 +22,12 @@
       // apiUrl: 'http://crm.addchina.com:7080' //客户环境 123
       // apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
       // apiUrl: 'http://192.168.4.141:9099' // 俊峰
-      // apiUrl: 'http://192.168.60.205:10050' // 内网服务器
+      apiUrl: 'http://192.168.60.205:10050' // 内网服务器
       // apiUrl: 'http://192.168.1.104:9099' // 冰清
       // apiUrl: 'http://192.168.4.138:9099' // 佳丽
       // apiUrl: 'http://192.168.4.142:9099' // 万
       // apiUrl : 'http://192.168.4.62:9099' // 永昆
-      apiUrl: 'http://192.168.4.59:9099' //  李强
+      // apiUrl: 'http://192.168.4.59:9099' //  李强
       // apiUrl : 'http://192.168.4.60:9099' //  宁江龙
     }
     localStorage.setItem('origin', window.location.origin)
