--- a/src/components/Upload/Attachments.less
+++ b/src/components/Upload/Attachments.less
@@ -17,32 +17,32 @@
         }
     }
     .fileButton{
-        width: 150px;
-        height: 150px;
+        width: 104px;
+        height: 104px;
         margin: 5px;
-        font-size: 1.2rem;
+        font-size: 1rem;
         span{
             display: block;
         }
     }
     .fileList{
-        width: 150px;
-        height: 150px;
+        width: 104px;
+        height: 104px;
         margin: 5px;
         float: left;
         border-radius: 5px;
         border:1px solid lightgray;
         .fileImg{
-            width: 130px;
-            height: 100px;
+            width: 90px;
+            // height: 100px;
             display: block;
             cursor: pointer;
-            margin: 0 10px 10px 10px;
+            margin: 0 7px 5px 7px;
         }
         .fileName{
-            width: 130px;
-            height: 21px;
-            margin-left: 10px;
+            width: 90px;
+            // height: 21px;
+            margin-left: 7px;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
@@ -55,7 +55,7 @@
             margin: 0;
             position: relative;
             top: -3px;
-            height: 14px;
+            height: 10px;
         }
     }
     .disFileList{
