--- a/src/components/Upload/Attachments.less
+++ b/src/components/Upload/Attachments.less
@@ -34,10 +34,11 @@
         border:1px solid lightgray;
         .fileImg{
             width: 90px;
+            max-height: 90px;
             // height: 100px;
             display: block;
             cursor: pointer;
-            margin: 0 7px 5px 7px;
+            margin: -3px 7px 5px 7px;
         }
         .fileName{
             width: 90px;
@@ -59,29 +60,29 @@
         }
     }
     .disFileList{
-        width: 150px;
-        height: 150px;
+        width: 104px;
+        max-height: 104px;
         margin: 5px;
         float: left;
         border-radius: 5px;
         background: #f9f9f9;
-        cursor: not-allowed !important;
+        // cursor: not-allowed !important;
         border:1px solid lightgray;
         .fileImg{
-            width: 130px;
-            height: 100px;
+            width: 90px;
+            height: 90px;
             display: block;
-            margin: 0 10px 10px 10px;
+            margin: 0 7px 5px 7px;
         }
         .fileName{
-            width: 130px;
-            margin-left: 10px;
+            width: 90px;
+            margin-left: 7px;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
         }
         .fileIcon{
-            height: 14px;
+            height: 7px;
         }
     }
 }
