--- a/src/components/TableButtonGroup/style.less
+++ b/src/components/TableButtonGroup/style.less
@@ -29,6 +29,14 @@
         top: 44px;
         z-index: 1;
         padding: 0;
+        background-color: unset;
+        box-shadow: unset;
+        li{
+          background-color: #fff
+        }
+        li:hover{
+          background-color: #e6f7ff;
+        }
       }
     }
   }
