--- a/src/components/Upload/Attachments.less
+++ b/src/components/Upload/Attachments.less
@@ -1,4 +1,7 @@
 .AttachmentsMain{
+    width: 1000px;
+    min-height:120px;
+    overflow: hidden;
     :global{
         .disUpload-list-inline{
             pointer-events: none;
