--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -7,7 +7,10 @@
     border-bottom: 2px solid #fff !important
   }
   .ant-menu-horizontal > .ant-menu-item-selected {
-    border-bottom: 2px solid #1890ff !important
+    // border-bottom: 2px solid #1890ff !important;
+    border-bottom-width:2px;
+    border-bottom-style:solid;
+    border-bottom-color:@primary-color !important;
   }
 }
 
