--- a/src/components/TableList/index.less
+++ b/src/components/TableList/index.less
@@ -14,6 +14,19 @@
             cursor: col-resize !important;
             z-index: 1;
         }
+        .ant-table-scroll table {
+          width: fit-content !important;
+          min-width: 100%;
+        }
+
+        .ant-table-header-column{
+          display: inline-block;
+          width: 100%;
+          position: relative;
+          .ant-table-column-sorters{
+            // width: 100%;
+          }
+        }
     }
 }
 
