--- a/src/global.less
+++ b/src/global.less
@@ -22,7 +22,6 @@ body,
   padding-right: 0;
 }
 
-
 .ant-checkbox-disabled::after {
   border: unset !important;
 }
@@ -37,12 +36,15 @@ body,
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+    div {
+      display: inline-block;
+    }
   }
 }
 
 .ant-table-scroll table {
-    width: fit-content !important;
-    min-width: 100%;
+  width: fit-content !important;
+  min-width: 100%;
 }
 
 canvas {
