--- a/src/global.less
+++ b/src/global.less
@@ -43,7 +43,7 @@ body,
 }
 
 .ant-table-scroll table {
-  width: fit-content !important;
+  // width: fit-content !important;
   min-width: 100%;
 }
 
