按钮组样式

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -28,6 +28,7 @@
       // apiUrl : 'http://192.168.4.62:9099' // 永昆
       // apiUrl: 'http://192.168.4.59:9099' //  李强
       // apiUrl : 'http://192.168.4.60:9099' //  宁江龙
+      // apiUrl: 'http://222.72.46.2:10050' // 浔兴
     }
     localStorage.setItem('origin', window.location.origin)
   </script>
