--- a/src/components/TableButtonGroup/style.less
+++ b/src/components/TableButtonGroup/style.less
@@ -24,18 +24,19 @@
       position: unset !important;
       left: 0;
       ul{
-        position: absolute;
+        // position: absolute;
         width: 100%;
         top: 44px;
         z-index: 1;
         padding: 0;
-        background-color: unset;
-        box-shadow: unset;
+        // background-color: unset;
+        height: 100% !important;
+        // box-shadow: unset;
         li{
-          background-color: #fff
+          // background-color: #fff
         }
         li:hover{
-          background-color: #e6f7ff;
+          // background-color: #e6f7ff;
         }
       }
     }
