--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -21,8 +21,8 @@
       // apiUrl: 'http://crm.addchina.com:7080' //客户环境 123
       // apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
       // apiUrl: 'http://192.168.4.141:9099' // 俊峰
-      // apiUrl: 'http://192.168.60.205:10050' // 内网服务器
-      apiUrl: 'http://220.189.216.106:10050' // 鸿裕服务器
+      apiUrl: 'http://192.168.60.205:10050' // 内网服务器
+      // apiUrl: 'http://220.189.216.106:10050' // 鸿裕服务器
       // apiUrl: 'http://192.168.4.138:9099' // 冰清
       // apiUrl: 'http://192.168.4.138:9099' // 佳丽
       // apiUrl: 'http://192.168.4.142:9099' // 万
