--- a/src/components/TableButtonGroup/style.less
+++ b/src/components/TableButtonGroup/style.less
@@ -34,6 +34,9 @@
         // box-shadow: unset;
         li{
           // background-color: #fff
+          .ant-btn{
+            box-shadow: unset !important;
+          }
         }
         li:hover{
           // background-color: #e6f7ff;
