--- a/src/global.less
+++ b/src/global.less
@@ -83,3 +83,29 @@ ol {
     }
   }
 }
+
+.noticeModalContainer{
+  :global{
+    .ant-modal-body{
+      padding: 8px 16px;
+      height: 500px;
+      h2{
+        margin-bottom: 0;
+        padding-left: 10px;
+        border-left: 6px solid #1890ff;
+      }
+      .auther{
+        margin-top: 12px;
+        margin-bottom: 12px;
+        padding-left: 8px;
+        background: #f9f9f9;
+        height: 35px;
+        line-height: 35px;
+        >span{
+          margin-right: 16px;
+        }
+      }
+    }
+
+  }
+}
