--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -19,9 +19,9 @@
       // apiUrl: 'http://192.168.4.139:9099' // 立中
       // apiUrl: 'http://192.168.4.57:9099' // 成杰
       // apiUrl: 'http://crm.addchina.com:7080' //客户环境 123
-      apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
+      // apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
       // apiUrl: 'http://192.168.60.205:10050' // 内网服务器
-      // apiUrl: 'http://220.189.216.106:30050' // 鸿裕服务器
+      apiUrl: 'http://220.189.216.106:30050' // 鸿裕服务器
       // apiUrl: 'http://192.168.4.138:9099' // 冰清
       // apiUrl : 'http://192.168.4.62:9099' // 永昆
       // apiUrl: 'http://192.168.4.59:9099' //  李强
