--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>精诚供应链系统</title>
+  <title>供应链系统</title>
   <link rel="icon" href="../assets/logo.png" type="image/x-icon" />
   <link rel="stylesheet" href="./iconfont.css">
 </head>
@@ -19,9 +19,9 @@
       // apiUrl: 'http://192.168.4.139:9099' // 立中
       // apiUrl: 'http://192.168.4.57:9099' // 成杰
       // apiUrl: 'http://crm.addchina.com:7080' //客户环境 123
-      apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
+      // apiUrl: 'http://zmmax.systex365.com:10050' //外网链接的服务器
       // apiUrl: 'http://192.168.60.205:10050' // 内网服务器
-      // apiUrl: 'http://220.189.216.106:30050' // 鸿裕服务器
+      apiUrl: 'http://220.189.216.106:30050' // 鸿裕服务器
       // apiUrl: 'http://192.168.4.138:9099' // 冰清
       // apiUrl : 'http://192.168.4.62:9099' // 永昆
       // apiUrl: 'http://192.168.4.59:9099' //  李强
@@ -29,6 +29,7 @@
       // apiUrl: 'http://222.72.46.2:10050' // 浔兴
     }
     localStorage.setItem('origin', window.location.origin)
+    document.title = localStorage.getItem('loginSubTitle')
   </script>
 
   <div id="root"></div>
