--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>供应链系统</title>
+  <!-- <title>dd供应链系统</title> -->
   <link rel="icon" href="../assets/logo.png" type="image/x-icon" />
   <link rel="stylesheet" href="./iconfont.css">
 </head>
