--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -23,12 +23,12 @@
       // apiUrl: 'http://192.168.60.205:10050' // 内网服务器
       // apiUrl: 'http://220.189.216.106:30050' // 鸿裕服务器
       // apiUrl: 'http://220.189.216.106:10050' // 鸿裕服务器-测试环境
-      // apiUrl: 'http://220.189.216.106:30050' // 鸿裕服务器-生产环境
+      apiUrl: 'http://220.189.216.106:30050' // 鸿裕服务器-生产环境
       // apiUrl: 'http://192.168.4.138:9099' // 冰清
       // apiUrl : 'http://192.168.4.62:9099' // 永昆
       // apiUrl: 'http://192.168.4.59:9099' //  李强
       // apiUrl : 'http://192.168.4.60:9099' //  宁江龙
-      apiUrl: 'http://222.72.46.2:10050' // 浔兴
+      // apiUrl: 'http://222.72.46.2:10050' // 浔兴
     }
     localStorage.setItem('origin', window.location.origin)
     document.title = localStorage.getItem('loginSubTitle')
