背景图片调整

--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -27,7 +27,7 @@
   .container {
     // background-image: url('https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg');
     background-repeat: no-repeat;
-    background-position: center 110px;
+    background-position: center 0;
     background-size: 100%;
   }
 
