--- a/src/components/HY/TableForm/Index.less
+++ b/src/components/HY/TableForm/Index.less
@@ -119,3 +119,18 @@
     }
   }
 }
+
+:global {
+  .deliveryModal {
+    //  background: red;
+    .ant-modal-body {
+      padding: 0 12px 12px 12px;
+      .ant-form-item {
+        display: flex;
+      }
+      .ant-card-body {
+        padding: 0;
+      }
+    }
+  }
+}
