箱柜去除鼠标的滚动事件

--- a/src/components/HY/ChildTable/Index.less
+++ b/src/components/HY/ChildTable/Index.less
@@ -4,6 +4,17 @@
             min-width: 170px;
         }
     }
+    
 }
 
+.NTableForm{
+    :global{
+        .ant-input{
+            padding:4px 4px !important;
+        }
+        .ant-form-explain{
+            display: block;
+        }
+    }
+}
 
