--- a/src/pages/HY/QualityAssurance/style.less
+++ b/src/pages/HY/QualityAssurance/style.less
@@ -1,5 +1,12 @@
 .qualityPage{
   :global{
+    .ant-form-item{
+      display: flex;
+      .ant-form-item-label{
+      width: 95px !important;
+    }
+    }
+    
     .ant-table{
       .ant-select-selection{
         display: block;
