报表页返回不调用detailed方法

--- a/src/components/TableList/index.less
+++ b/src/components/TableList/index.less
@@ -64,10 +64,11 @@
           overflow: hidden !important;
         }
         >a{
-          // display: inline-block !important;
+          display: inline-block !important;
           width: 100% !important;
           text-overflow: ellipsis !important;
           overflow: hidden !important;
+          white-space:nowrap !important;
         }
       }
       .ant-table-row-expand-icon{
